--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe Game</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="app.js"></script>
+    <script src="app.js"></script>
 </head>
+
 <body>
-    
-</body>
+
+    <body>
+        <div class="container">
+            <div id="gameBoard">
+                <div class="row">
+                    <div class="cell" onclick="cellClicked(0)"></div>
+                    <div class="cell" onclick="cellClicked(1)"></div>
+                    <div class="cell" onclick="cellClicked(2)"></div>
+                </div>
+                <div class="row">
+                    <div class="cell" onclick="cellClicked(3)"></div>
+                    <div class="cell" onclick="cellClicked(4)"></div>
+                    <div class="cell" onclick="cellClicked(5)"></div>
+                </div>
+                <div class="row">
+                    <div class="cell" onclick="cellClicked(6)"></div>
+                    <div class="cell" onclick="cellClicked(7)"></div>
+                    <div class="cell" onclick="cellClicked(8)"></div>
+                </div>
+            </div>
+        </div>
+         <p id="statusText">Player X's turn</p>
+        <button onclick="initializeGame()">Reset Game</button>
+    </body>
+
 </html>
