Made Added custom modification.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe Game</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script src="app.js"></script>
 </head>
 
@@ -31,7 +32,7 @@
                 </div>
             </div>
         </div>
-         <p id="statusText">Player X's turn</p>
+        <p id="statusText">Player X's turn</p><br>
         <button onclick="initializeGame()">Reset Game</button>
     </body>
 
